# hypothesis

./: .gitignore  build.sh  pyproject.toml
.github/workflows/: main.yml
hypothesis-python/: pyproject.toml  tox.ini
hypothesis-python/docs/_static/: no-scroll.css
hypothesis-python/src/hypothesis/: control.py  stateful.py  version.py
hypothesis-python/src/hypothesis/extra/: _array_helpers.py
hypothesis-python/src/hypothesis/internal/: compat.py
hypothesis-python/src/hypothesis/internal/conjecture/: shrinker.py
hypothesis-python/src/hypothesis/strategies/_internal/: core.py  types.py
hypothesis-python/tests/: conftest.py
hypothesis-python/tests/common/: setup.py  utils.py
hypothesis-python/tests/conjecture/: test_provider.py
hypothesis-python/tests/cover/: test_stateful.py
hypothesis-python/tests/crosshair/: test_conformance.py
hypothesis-python/tests/nocover/: test_database_usage.py
requirements/: tools.in
tooling/src/hypothesistooling/projects/: hypothesispython.py
